--- a/templates/input_form.html
+++ b/templates/input_form.html
@@ -13,25 +13,25 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <div class=page>
-      <div class="row">
+    <div class="page">
+      <div class="row"> 
         <div class="col-lg-12 text-left">
-          <h2>Enter the information needed from the stock ticker</h2>
-	  <form id='userinfoform_lulu' method='post' action='index_lulu' > 
+          <h4>Enter the information needed from the stock ticker</h4>
+	  <form id='userinfoform' method='post' action='submitted' > 
           	<p>
-		Company: <input type='text' name='Ticker'>
+		Company: <input type='text' name='ticker'>
 		</p>
 		<p>
 		Value: <select name="value" value='Open'>
-				<option value='Open'>Open</option>
-				<option value='Close'>Open</option>
-				<option value='High'>Open</option>
-				<option value='Low'>Open</option>
-				<option value='Range'>Open</option>
+				<option value='open'>Open</option>
+				<option value='close'>Close</option>
+				<option value='high'>High</option>
+				<option value='low'>Low</option>
+				<option value='range'>Range</option>
 			</select>
                </p>
                <p>
-	       Adjusted <input type="radio" name="adjusted">
+	       Adjusted <input type="checkbox" name="adjusted" value="True">
 	       </p>
                <p>
                <input type='submit' value='Submit' />
