--- a/templates/input_form.html
+++ b/templates/input_form.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <div class="page">
+    <div class="container">
       <div class="row"> 
         <div class="col-lg-12 text-left">
           <h4>Enter the information needed from the stock ticker</h4>
